--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
     <h1>Père Bodul</h1>
 
     <form id="storyForm">
-        <label for="age">Âge:</label>
+        <label for="age">Âge de l'enfant:</label>
         <input type="number" id="age" name="age">
-        <label for="hero">Héros:</label>
+        <label for="hero">Qui est le héro ?</label>
         <input type="text" id="hero" name="hero">
-        <label for="villain">Méchant:</label>
+        <label for="villain">Parlez moi du méchant ?</label>
         <input type="text" id="villain" name="villain">
-        <label for="location">Lieu:</label>
+        <label for="location">Où se situe l'histoire ?</label>
         <input type="text" id="location" name="location">
-        <label for="objects">Objets (séparés par des virgules):</label>
+        <label for="objects">Objets à inclure dans l'histoire (séparés par des virgules):</label>
         <input type="text" id="objects" name="objects">
         <input type="submit" value="Générer l'histoire">
     </form>
