--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             margin: 0;
             padding: 0;
             background-color: #f8f9fa;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
         .container {
@@ -28,6 +33,9 @@
             padding: 20px;
             margin-bottom: 20px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
         }
 
         label {
@@ -42,9 +50,11 @@
             margin-bottom: 20px;
             border-radius: 5px;
             border: 1px solid #ced4da;
+            box-sizing: border-box;
         }
 
         input[type="submit"] {
+            align-self: center;
             background-color: #007bff;
             color: #ffffff;
             border: none;
