--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fr">
 <head>
     <title>Père Bodul, raconte-nous un histoire !</title>
     <style>
@@ -121,7 +120,8 @@
 </div>
 
 <div>
-    Fait avec ❤️ par <a target="_blank" href="https://github.com/lborie/pere-bodul">Bodul avec l'assistance de ChatGPT</a>
+    Fait avec ❤️ par <a target="_blank" href="https://github.com/lborie/pere-bodul">Bodul avec l'assistance de
+    ChatGPT</a>
 </div>
 
 <script>
@@ -160,5 +160,4 @@
     });
 </script>
 </body>
-
 </html>
