--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         var formData = new FormData();
         storyElement.innerText = "Veuillez patienter, l'histoire est en cours de génération...";
         actionButton.disabled = true;
+        imageLink.hidden = true;
+        image.hidden = true;
+        playerElement.hidden = true;
         actionButton.value = "Génération en cours...";
 
         for (var i = 0; i < formElements.length; i++) {
@@ -165,13 +168,13 @@
                 data = JSON.parse(data);
                 storyElement.innerText = data.story;
                 playerElement.src = 'data:audio/mpeg;base64,' + data.audio;
-                playerElement.hidden = false;
                 actionButton.disabled = false;
                 actionButton.value = "Re-Générer une histoire";
-                image.hidden = false;
                 image.src = data.imageUrl;
-                imageLink.hidden = false;
                 imageLink.href = data.imageUrl;
+                imageLink.hidden = false;
+                image.hidden = false;
+                playerElement.hidden = false;
             });
     });
 </script>
