--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         }
 
         h1 {
+            border-radius: 5px;
+            background-color: #ffffff;
             text-align: center;
             color: #343a40;
+            padding: 10px;
         }
 
         form {
