feat: always generate the display through Chat GPT

--- a/serve/index.html
+++ b/serve/index.html
@@ -182,7 +182,7 @@
 
 <div class="bottom">
     Fait avec ❤️ par <a target="_blank" href="https://github.com/lborie/pere-bodul">Bodul avec l'assistance de
-    ChatGPT</a>
+    ChatGPT et de Google</a>
 </div>
 
 <script>
