feat: add gemini model

--- a/serve/index.html
+++ b/serve/index.html
@@ -146,6 +146,7 @@
         <div class="storyElement">
             <label for="ai_impl">Quel magicien écrit l'histoire ?</label>
             <select id="ai_impl" name="ai_impl">
+                <option value="gemini">Gemini</option>
                 <option value="gcp">GCP</option>
                 <option value="openai">OpenAI</option>
             </select>
