feat: go 22 and refacto

--- a/serve/index.html
+++ b/serve/index.html
@@ -146,9 +146,9 @@
         <div class="storyElement">
             <label for="ai_impl">Quel magicien écrit l'histoire ?</label>
             <select id="ai_impl" name="ai_impl">
-                <option value="gemini">Gemini</option>
-                <option value="gcp">GCP</option>
-                <option value="openai">OpenAI</option>
+                <option value="gemini-pro">Gemini Pro</option>
+                <option value="OpenAI">OpenAI</option>
+                <option value="text-bison">Text Bison</option>
             </select>
         </div>
         <div class="storyElement">
