fix: hero with a S

--- a/serve/index.html
+++ b/serve/index.html
@@ -152,7 +152,7 @@
             </select>
         </div>
         <div class="storyElement">
-            <label for="hero">Qui est le héro ?</label>
+            <label for="hero">Qui est le héros ?</label>
             <input type="text" id="hero" name="hero">
         </div>
         <div class="storyElement">
